# DSTR_2

./: CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  README.md
data/: blocked_route_state.json  default_state.json  multi_robot_state.json
debug/: array.natvis
doc/: assumptions.md  code-reqs.md  code-style.md
doc/src/: Source.cpp.md  headers.h.md
doc/src/area_layout/: area_layout.cpp.md  area_layout.h.md
doc/src/cli/: app_state.h.md  cli.cpp.md  cli.h.md
doc/src/common/: circular_queue.h.md  common.h.md  cpp_version.h.md  enums.h.md  math.h.md  position.cpp.md  position.h.md  queue.h.md  queue.inl.md  result.h.md  string_helpers.h.md  time.h.md
doc/src/common/aliases/: aliases.h.md  numeric.h.md
doc/src/common/array/: array.cpp.md  array.h.md  array.inl.md
doc/src/common/cell/: cell.cpp.md  cell.h.md
doc/src/files/: files.cpp.md  files.h.md
doc/src/order_management/: order_management.h.md  task.cpp.md  task.h.md  task_queue.cpp.md  task_queue.h.md
doc/src/robot_assignment/: robot.cpp.md  robot.h.md  robot_queue.cpp.md  robot_queue.h.md
doc/src/robot_navigation/: path.cpp.md  path.h.md  pathfinder.cpp.md  pathfinder.h.md  robot_navigation.h.md
doc/tasks/: abstract.md
src/: Source.cpp  cli.h  headers.h  navigation.h
src/area_layout/: area_layout.cpp  area_layout.h
src/array/: array.h  array.inl
src/cli/: app_state.h  cli.cpp  cli.h
src/common/: aliases.h  base.h  circular_queue.h  common.h  cpp_version.h  domain_types.h  enums.h  files.h  math.h  position.cpp  position.h  queue.h  queue.inl  resident.h  result.h  string_helpers.h  strings.h  time.h  types.h
src/common/aliases/: aliases.h  numeric.h
src/common/array/: array.h  array.inl
src/common/cell/: cell.cpp  cell.h
src/common/graph/: graph.h  graph.inl
src/common/item/: item.cpp  item.h
src/common/memory/: alloc.h  arena_allocator.h  pool_allocator.h
src/common/robot/: robot.cpp  robot.h
src/common/stack/: stack.h  stack.inl
src/common/storage/: storage.cpp  storage.h
src/common/strings/: array.h  base.h  cli.h  domain.h  errors.h  list.h  path.h  strings.h
src/files/: files.cpp  files.h
src/list/: list.cpp  list.h  list.inl
src/order_management/: order_management.h  task.cpp  task.h  task_queue.cpp  task_queue.h
src/robot_assignment/: circular_queue.h  robot.cpp  robot.h  robot_queue.cpp  robot_queue.h  robot_queue_display.cpp  robot_queue_display.h
src/robot_navigation/: demo_navigation.cpp  movement_step.cpp  movement_step.h  navigation_log.cpp  navigation_log.h  path.cpp  path.h  path_stack.h  pathfinder.cpp  pathfinder.h  robot_navigator.cpp  robot_navigator.h
(+22 files in other folders)
